--- a/packages/@manpackers/generator-vue/package.json
+++ b/packages/@manpackers/generator-vue/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manpackers/generator-vue.git"
+    "url": "git@github.com:manpackers/front-build.git"
   },
   "keywords": [
     "vue",
@@ -25,9 +25,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/manpackers/generator-vue/issues"
+    "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "https://github.com/manpackers/generator-vue#readme",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "dependencies": {
     "@manpacker/generator": "^1.8.0",
     "vue": "^2.6.10",
