--- a/packages/@manpackers/generator/package.json
+++ b/packages/@manpackers/generator/package.json
@@ -25,9 +25,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "git@github.com:manpackers/front-build/issues"
+    "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "git@github.com:manpackers/front-build.git#readme",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "eslintConfig": {
     "extends": [
       "manpacker",
