--- a/packages/eslint-config-manpacker-react/package.json
+++ b/packages/eslint-config-manpacker-react/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manpackers/eslint-config-manpacker-react.git"
+    "url": "git@github.com:manpackers/front-build.git"
   },
   "keywords": [
     "reactjs",
@@ -29,9 +29,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/manpackers/eslint-config-manpacker-react/issues"
+    "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "https://github.com/manpackers/eslint-config-manpacker-react#readme",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "dependencies": {
     "eslint-config-manpacker": "^1.1.1",
     "eslint-plugin-react": "^7.12.4"
