--- a/packages/eslint-config-manpacker-typescript/package.json
+++ b/packages/eslint-config-manpacker-typescript/package.json
@@ -7,12 +7,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manpackers/eslint-config-manpacker-typescript.git"
+    "url": "git@github.com:manpackers/front-build.git"
   },
   "bugs": {
-    "url": "https://github.com/manpackers/eslint-config-manpacker-typescript/issues"
+    "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "https://github.com/manpackers/eslint-config-manpacker-typescript#readme",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./test --config=index.js"
