--- a/packages/eslint-config-manpacker-vue/package.json
+++ b/packages/eslint-config-manpacker-vue/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/manpackers/eslint-config-manpacker-vue.git"
+    "url": "git@github.com:manpackers/front-build.git"
   },
   "keywords": [
     "vue",
@@ -28,9 +28,9 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/manpackers/eslint-config-manpacker-vue/issues"
+    "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "https://github.com/manpackers/eslint-config-manpacker-vue#readme",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "dependencies": {
     "eslint-config-manpacker": "^1.5.0",
     "eslint-plugin-vue": "^5.2.2",
