--- a/packages/eslint-config-manpacker/package.json
+++ b/packages/eslint-config-manpacker/package.json
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/manpackers/front-build.git"
+    "url": "git@github.com:manpackers/front-build.git"
   },
   "bugs": {
     "url": "https://github.com/manpackers/front-build/issues"
   },
-  "homepage": "https://github.com/manpackers/front-build.git",
+  "homepage": "https://github.com/manpackers/front-build#readme",
   "scripts": {
     "lint": "eslint ./test --config=index.js",
     "test": "npm run lint && tape test/*.js"
