--- a/packages/@manpackers/generator/package.json
+++ b/packages/@manpackers/generator/package.json
@@ -7,8 +7,8 @@
     "manpacker": "./bin/manpacker"
   },
   "scripts": {
-    "test:server": "node ./bin/manpacker server --ic ./test/config/manpacker.ic.js --config ./test/manpacker.webpack.js",
-    "test:build": "node ./bin/manpacker build  --ic ./test/config/manpacker.ic.js --config ./test/manpacker.webpack.js"
+    "test:server": "node ./bin/manpacker server --ic ./__test__/config/manpacker.ic.js --config ./__test__/manpacker.webpack.js",
+    "test:build": "node ./bin/manpacker build  --ic ./__test__/config/manpacker.ic.js --config ./__test__/manpacker.webpack.js"
   },
   "repository": {
     "type": "git",
@@ -28,16 +28,15 @@
     "url": "https://github.com/manpackers/front-build/issues"
   },
   "homepage": "https://github.com/manpackers/front-build#readme",
-  "eslintConfig": {
-    "extends": [
-      "manpacker",
-      "manpacker/prittier",
-      "manpacker-typescript"
-    ]
-  },
   "babel": {
     "presets": [
       "manpacker"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "manpacker",
+      "manpacker/prettier"
     ]
   },
   "publishConfig": {
@@ -45,8 +44,8 @@
   },
   "devDependencies": {
     "babel-preset-manpacker": "^1.1.1",
-    "eslint": "^6.8.0",
-    "eslint-config-manpacker-typescript": "^1.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-manpacker": "^1.6.1",
     "ts-loader": "^5.4.5",
     "typescript": "^3.5.1"
   },
@@ -58,13 +57,13 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.0",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.5",
+    "html-webpack-plugin": "^4.5.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^0.11.3",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^3.4.0",
+    "ora": "^5.3.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
@@ -75,6 +74,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "style-resources-loader": "^1.2.1",
+    "stylelint-webpack-plugin": "^2.1.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.1.2",
