--- a/packages/@manpackers/noden/package.json
+++ b/packages/@manpackers/noden/package.json
@@ -7,9 +7,9 @@
     "manpacker-noden": "./bin/manpacker-noden"
   },
   "scripts": {
-    "test:server": "node ./bin/manpacker-noden server --ic ./test/config/manpacker.ic.js --config ./test/manpacker.config.js",
-    "test:build": "node ./bin/manpacker-noden build --ic ./test/config/manpacker.ic.js --config ./test/manpacker.config.js",
-    "test:nodemon": "nodemon --watch ./test/app/index.js ./test/app/inde.js 9090"
+    "test:server": "node ./bin/manpacker-noden server --ic ./__test__/config/manpacker.ic.js --config ./test/manpacker.config.js",
+    "test:build": "node ./bin/manpacker-noden build --ic ./__test__/config/manpacker.ic.js --config ./test/manpacker.config.js",
+    "test:nodemon": "nodemon --watch ./test/app/index.js ./__test__/app/inde.js 9090"
   },
   "repository": {
     "type": "git",
@@ -31,22 +31,23 @@
     "url": "https://github.com/manpackers/front-build/issues"
   },
   "homepage": "https://github.com/manpackers/front-build#readme",
-  "eslintConfig": {
-    "extends": [
-      "manpacker-typescript"
-    ]
-  },
   "babel": {
     "presets": [
       "manpacker"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "manpacker-typescript",
+      "manpacker-typescript/prettier"
+    ]
+  },
   "devDependencies": {
     "babel-preset-manpacker": "^1.1.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.19.0",
     "eslint-config-manpacker-typescript": "^1.2.0",
-    "koa": "^2.7.0",
-    "typescript": "^3.8.3"
+    "koa": "^2.13.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "babel-loader": "^8.0.5",
