--- a/packages/babel-preset-manpacker-react/package.json
+++ b/packages/babel-preset-manpacker-react/package.json
@@ -4,7 +4,7 @@
   "description": "Manpacker babel presets react",
   "main": "index.js",
   "scripts": {
-    "babel": "npx babel ./test --out-dir dist"
+    "test": "npx babel ./__test__ --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -27,18 +27,20 @@
   "license": "MIT",
   "eslintConfig": {
     "extends": [
-      "manpacker"
+      "manpacker",
+      "manpacker/prettier",
+      "manpacker/npm"
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "eslint": "^5.16.0",
-    "eslint-config-manpacker-react": "^1.1.1"
+    "@babel/cli": "^7.12.13",
+    "eslint": "^7.19.0",
+    "eslint-config-manpacker-react": "^1.4.4"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.12.13",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-manpacker": "^1.1.1",
-    "deepmerge": "^3.2.0"
+    "deepmerge": "^4.2.2"
   }
 }
