--- a/packages/eslint-config-manpacker-react/package.json
+++ b/packages/eslint-config-manpacker-react/package.json
@@ -4,7 +4,7 @@
   "description": "Reactjs project eslint code style",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "test": "__test__"
   },
   "scripts": {
     "lint": "eslint ./test --config=index.js",
@@ -32,12 +32,13 @@
     "url": "https://github.com/manpackers/front-build/issues"
   },
   "homepage": "https://github.com/manpackers/front-build#readme",
-  "dependencies": {
-    "eslint-config-manpacker": "^1.1.1",
-    "eslint-plugin-react": "^7.12.4"
-  },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "tape": "^4.10.1"
+    "deepmerge": "^4.2.2",
+    "eslint": "^7.19.0",
+    "tape": "^5.1.1"
+  },
+  "dependencies": {
+    "eslint-config-manpacker": "^1.6.1",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
